tweak subtitle color

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7521,7 +7521,7 @@ body {
       max-width: 66%;
       line-height: 1.75rem;
       text-align: left;
-      color: #9af; }
+      color: #9ef; }
       .hero.hero--homepage-top .hero-body h3.title span {
         color: #fff;
         display: block; }
