--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8246,9 +8246,9 @@ button, .button {
   button.is-primary:hover, button.is-primary.is-hovered, button.is-primary:focus, button.is-primary:focus:not(:active), .button.is-primary:hover, .button.is-primary.is-hovered, .button.is-primary:focus, .button.is-primary:focus:not(:active) {
     background-color: #96f; }
   button.is-primary.is-inverse.is-inverse, button.is-primary.is-inverse:hover, button.is-primary.is-inverse.is-hovered, button.is-primary.is-inverse:focus, button.is-primary.is-inverse:focus:not(:active), .button.is-primary.is-inverse.is-inverse, .button.is-primary.is-inverse:hover, .button.is-primary.is-inverse.is-hovered, .button.is-primary.is-inverse:focus, .button.is-primary.is-inverse:focus:not(:active) {
-    background: #f6f8fa;
+    background: #96f;
     border: none;
-    color: #83f; }
+    color: #fff; }
   button.is-primary.is-icon-only, button.is-primary.is-icon-only:hover, button.is-primary.is-icon-only.is-hovered, button.is-primary.is-icon-only:focus, button.is-primary.is-icon-only:focus:not(:active), .button.is-primary.is-icon-only, .button.is-primary.is-icon-only:hover, .button.is-primary.is-icon-only.is-hovered, .button.is-primary.is-icon-only:focus, .button.is-primary.is-icon-only:focus:not(:active) {
     border: none;
     color: #fff;
